--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ la estructura que se llenara como se menciona a continuación...-->
     		<!--contenedor para el texto de cada sección-->
     		<div class="texto-secc">
     			<!--si se quiere modificar contenido susutituir el texto entre las etiquetas de texto tipo h1-->
-		       	        		<img src="imagenes/Louvre.png" title="Img 1b"> 
+		       	        		<img src="imagenes/Louvre.png"> 
 		       	  <h1>Museo</h1>
 
 <!--contenedor para contenidos de cada sección-->
@@ -288,4 +288,5 @@ la estructura que se llenara como se menciona a continuación...-->
 </body>
 
 </html>
+
 
