--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ la estructura que se llenara como se menciona a continuación...-->
     		<!--contenedor para las imagenes de la sección OJO: este tiene un layout para una imagen-->
     		<a href="https://youtu.be/7V9i-jW5hN8">
     		<div class="contenedor-imagen">
-        		<img  src="imagenes/autores.png">
+        		<img  src="imagenes/Autores.png">
         		</a>
 
 
@@ -288,5 +288,6 @@ la estructura que se llenara como se menciona a continuación...-->
 </body>
 
 </html>
+
 
 
