--- a/index.html
+++ b/index.html
@@ -124,11 +124,16 @@ la estructura que se llenara como se menciona a continuación...-->
 		        <!--si se quiere modificar contenido susutituir el texto entre las etiquetas de parrafo-->
 		        <p3>Literatura que incomoda, revela y transforma.</p3>
 		         <br>
-		        <p5>El festival celebra textos que han sacudido conciencias y advertido sobre los riesgos de la manipulación, el poder absoluto y el control social. Entre ellos: 
-		        	- 1984, de George Orwell: una brutal radiografía del totalitarismo moderno. 
-		        	- Un Mundo Feliz, de Aldous Huxley: una distopía que reflexiona sobre la felicidad artificial y la pérdida de humanidad.
-		        	- The Rape of the Mind: The Psychology of Thought Control, de Joost Meerloo: un análisis profundo sobre técnicas de propaganda y coerción mental.
-		        	- Confesiones de un Sicario Económico, de John Perkins: una mirada directa al engranaje económico que ha moldeado gobiernos y sociedades.
+		        <p5>El festival celebra textos que han sacudido conciencias y advertido sobre los riesgos de la manipulación, el poder absoluto y el control social. Entre ellos:<p5> 
+					<br>
+		        	<p5>- 1984, de George Orwell: una brutal radiografía del totalitarismo moderno.<p5>
+					<br>
+		        	<p5>- Un Mundo Feliz, de Aldous Huxley: una distopía que reflexiona sobre la felicidad artificial y la pérdida de humanidad.<p5>
+					<br>
+		        	<p5>- The Rape of the Mind: The Psychology of Thought Control, de Joost Meerloo: un análisis profundo sobre técnicas de propaganda y coerción mental.<p5>
+					<br>
+		        	<p5>- Confesiones de un Sicario Económico, de John Perkins: una mirada directa al engranaje económico que ha moldeado gobiernos y sociedades.<p5>
+					<br>
 		        	Estas obras serán exploradas en mesas de diálogo, lecturas guiadas y análisis contemporáneos.</p5>
 		        <br><!--etiqueta para un brinco de renglón-->
 
@@ -166,11 +171,15 @@ la estructura que se llenara como se menciona a continuación...-->
 		        <!--si se quiere modificar contenido susutituir el texto entre las etiquetas de parrafo-->
 		        <p3>Audiovisuales que revelan narrativas ocultas</p3>
 		        <br>
-		        <p5>El programa incluye proyecciones especiales que amplían la conversación hacia lo visual:
-		        	- Land of the Blind (2006): una sátira política sobre poder, revolución y manipulación.
-		        	- Zeitgeist: documental que cuestiona mitos culturales, sistemas económicos y estructuras de control.
-		        	- The Money Masters: una investigación sobre la historia del sistema bancario y el poder financiero global.
-		        	Cada material se presentará acompañado de foros abiertos, donde expertos y asistentes compartirán perspectivas y reflexiones.</p5>
+		        <p5>El programa incluye proyecciones especiales que amplían la conversación hacia lo visual:<p5>
+					<br>
+		        	<p5>- Land of the Blind (2006): una sátira política sobre poder, revolución y manipulación.<p5>
+					<br>
+		        	<p5>- Zeitgeist: documental que cuestiona mitos culturales, sistemas económicos y estructuras de control.<p5>
+					<br>	
+		        	<p5>- The Money Masters: una investigación sobre la historia del sistema bancario y el poder financiero global.<p5>
+					<br>	
+		        	<p5>Cada material se presentará acompañado de foros abiertos, donde expertos y asistentes compartirán perspectivas y reflexiones.</p5>
 
 		        	<div class="contenedor-columnas2"> 
 
@@ -288,3 +297,4 @@ la estructura que se llenara como se menciona a continuación...-->
 </body>
 
 </html>
+
