--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ la estructura que se llenara como se menciona a continuación...-->
     		<!--contenedor para el texto de cada sección-->
     		<div class="texto-secc">
     			<!--si se quiere modificar contenido susutituir el texto entre las etiquetas de texto tipo h1-->
-		       	        		<img src="imagenes/Louvre.png" title="Img 1b"> 
+		       	        		<img src="imagenes/Louvre.png"> 
 		       	  <h1>Museo</h1>
 
 <!--contenedor para contenidos de cada sección-->
@@ -115,7 +115,7 @@ la estructura que se llenara como se menciona a continuación...-->
     		<!--contenedor para las imagenes de la sección OJO: este tiene un layout para una imagen-->
     		<a href="https://youtu.be/7V9i-jW5hN8">
     		<div class="contenedor-imagen">
-        		<img  src="imagenes/autores.png">
+        		<img  src="imagenes/Autores.png">
         		</a>
 
 
@@ -297,5 +297,6 @@ la estructura que se llenara como se menciona a continuación...-->
 </body>
 
 </html>
+
 
 
